--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "pnpm run trash ./dist;  next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -30,6 +30,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-nesting": "^10.1.10",
     "postcss-preset-env": "^7.7.2",
+    "trash": "^8.1.0",
     "typescript": "4.7.4"
   }
 }
